@@ -1,3 +1,11 @@
+2002-04-25  Sam Steingold  <sds@gnu.org>
+
+	fixed bug #[ 548368 ]: inspector help barfs (nested inspectors)
+	* inspect.lisp (*inspect-all*): bind in INSPECT instead of using
+	a global variable since nested INSPECT sessions can interfere
+	with each other, each modifying the same *INSPECT-ALL*
+	(inspect-finalize): the default method now does nothing
+
 2002-04-24  Sam Steingold  <sds@gnu.org>
 
 	fixed bug #[ 548362 ]: inspector deletes wrong package on exit
